# eqasim-france

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .release-please-manifest.json  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  config.yml  config_77.yml  config_corsica.yml  config_full.yml  config_iris.yml  config_lyon.yml  config_nantes.yml  config_toulouse.yml  environment.yml  pyproject.toml  run_with_relative_paths.py
.github/: dependabot.yml
.github/workflows/: data.yml  docker-publish.yml  release-please.yml  sphinx.yml  tests.yml
analysis/: bootstrapping.py  chains.py  marginals.py  statistics.py
analysis/debug/: sc.py
analysis/grid/: comparison_flow_volume.py
analysis/reference/: income.py
analysis/synthesis/: commute_distance.py  commute_flow.py  income.py  matching.py  mode_distances.py  population.py
containers/: Dockerfile  apptainer.def
data/ban/: raw.py
data/bdtopo/: output.py  raw.py
data/bpe/: cleaned.py  raw.py
data/census/: cleaned.py  filtered.py  projection.py  raw.py
data/cutter/: geometry.py  poly.py
data/gtfs/: cleaned.py  output.py  utils.py
docs/: conf.py  contents.md  index.rst  population.md  population_before.md  requirements.txt  simulation.md  verify_data.py
documentation/: meta_output.py  paper.py  plotting.py  shapes.py
matsim/: output.py  writers.py
scripts/: download.py  perimeter.py  run_full_pipeline.py  verify_data.py
sphinx_doc/: conf.py
synthesis/: output.py
tests/: conftest.py  test_determinism.py  test_pipeline.py  test_simulation.py  testdata.py
(+198 files in other folders)
