[project]
name = "eqasim-france"
version = "1.4.0"
description = "Generating synthetic populations for France based on open data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bhepop2>=2.0.1",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "mobisurvstd>=1.1.0",
    "mock>=5.2.0",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "osmium>=4.3.1",
    "palettable>=3.3.3",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "py7zr>=1.1.0",
    "pyarrow>=23.0.1",
    "pytest>=9.0.3",
    "python-calamine>=0.6.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "synpp>=1.6.1",
    "tqdm>=4.67.3",
    "xlrd>=2.0.2",
    "xlwt>=1.3.0",
    "zstandard>=0.25.0",
]
